# Pract_5

./: alembic.ini  api.py  config.py  main.py  path.py  pyproject.toml  response_models.py
alembic/: env.py
alembic/versions/: a08a8e4e9492_sjhjsad.py  c4a86394abc0_sjhjsad.py
